--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -27,5 +27,10 @@
 		android:id="@+id/settingsButton"
 		android:layout_width="match_parent"
 		android:layout_height="wrap_content"/>
+	<Button
+		android:text="Bonus"
+		android:id="@+id/bonusButton"
+		android:layout_width="match_parent"
+		android:layout_height="wrap_content"/>
 
 </LinearLayout>
